@@ -224,6 +224,7 @@ Bug Fixes:
 - PR#5620: invalid printing of type manifest (camlp4 revised syntax)
 - PR#5637: invalid printing of anonymous type parameters (camlp4 revised syntax)
 - PR#5643: issues with .cfi and .loc directives generated by ocamlopt -g
+- PR#5647: Cannot use install_printer in debugger
 - PR#5651: printer for abstract data type (camlp4 revised syntax)
 - PR#5655: ocamlbuild doesn't pass cflags when building C stubs
 - PR#5661: fixes for the test suite
